# tc-bug

./: Cargo.toml  justfile
.github/workflows/: ci.yml
kubernetes/matverseny-backend/: ingress.yaml
src/: lib.rs  main.rs
tests/: competition.rs  problem.rs  register.rs  socket.rs  stats.rs  team.rs
tests/utils/: setup.rs
